pre-test delete trip implementation